--- a/ktor-client/ktor-client-ios/build.gradle
+++ b/ktor-client/ktor-client-ios/build.gradle
@@ -7,12 +7,13 @@ konanArtifacts {
         srcDir 'src'
 
         libraries {
-            artifact project(':ktor-http:ktor-http-ios'), 'ktor_http_ios'
-            artifact project(':ktor-utils:ktor-utils-ios'), 'ktor_utils_ios'
+            artifact project(':ktor-client:ktor-client-core:ktor-client-core-ios'), 'ktor_client_core_ios'
+        }
+
+        dependencies {
+            artifactktor_client_ios "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:$coroutines_version"
+            artifactktor_client_ios "org.jetbrains.kotlinx:kotlinx_io_native:$kotlinx_io_version"
+            artifactktor_client_ios "org.jetbrains.kotlinx:kotlinx_coroutines_io_native:$kotlinx_io_version"
         }
     }
-}
-
-dependencies {
-    expectedBy project(':ktor-client:ktor-client-core')
 }
