--- a/ktor-utils/ktor-utils-ios/build.gradle
+++ b/ktor-utils/ktor-utils-ios/build.gradle
@@ -6,6 +6,7 @@ konanArtifacts {
         srcDir 'src'
 
         dependencies {
+            artifactktor_utils_ios "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:$coroutines_version"
             artifactktor_utils_ios "org.jetbrains.kotlinx:kotlinx_io_native:$kotlinx_io_version"
             artifactktor_utils_ios "org.jetbrains.kotlinx:kotlinx_coroutines_io_native:$kotlinx_io_version"
         }
